Bug 60178 - Incorrectly drawing glxgears with mesa 7.11.2
Summary: Incorrectly drawing glxgears with mesa 7.11.2
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/intel (show other bugs)
Version: 7.7 (2012.06)
Hardware: x86 (IA32) Linux (All)
: medium normal
Assignee: Chris Wilson
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-02-01 21:16 UTC by Deve
Modified: 2013-02-13 15:14 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
glxgears.png (9.26 KB, image/png)
2013-02-01 21:16 UTC, Deve
no flags Details

Description Deve 2013-02-01 21:16:15 UTC
Created attachment 74073 [details]
glxgears.png

You can see it on screenshot. It looks funny. I have it only with mesa 7.11.2. With 9.0.1 everything is OK.

Bad configuration:
linux-image 3.7.5
xserver-xorg-video-intel current git 9807bba950078d86a25b91064ecfebaa0ee459e3
mesa 7.11.2
libdrm 2.4.40

Good configuration:
mesa 9.0.1
Comment 1 Deve 2013-02-01 21:17:15 UTC
intel 965GM
Comment 2 Kenneth Graunke 2013-02-02 01:39:28 UTC
Mesa 7.11 is no longer maintained.  If 9.0 works, please use that.
Comment 3 Deve 2013-02-02 11:03:56 UTC
Of course, but with previous intel drivers 2.20.19 everything worked. So I'm not sure if this is bug in mesa.

And I can't use mesa 9.0 because of:
https://bugs.freedesktop.org/show_bug.cgi?id=51471
https://bugs.freedesktop.org/show_bug.cgi?id=57338
https://bugs.freedesktop.org/show_bug.cgi?id=55396
Comment 4 Deve 2013-02-10 18:13:40 UTC
I have it also with mesa 8.0.5 - this is default mesa version in Debian Wheezy.
Comment 5 Chris Wilson 2013-02-13 15:14:49 UTC
commit 9861423a76402c260724a752ada293a03ce1a79b
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Wed Feb 13 15:11:45 2013 +0000

    sna/dri: Fix typo limiting gen4 to TILING_X depth buffers
    
    Fixes regression from
    
    commit 98b312e579385e6e4adf6bf0abe20f8ca84592af
    Author: Chris Wilson <chris@chris-wilson.co.uk>
    Date:   Wed Jan 23 20:51:35 2013 +0000
    
        sna/dri: Stop feeding I915_TILING_Y to mesa i915c
    
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=60178
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.