sna/dri: Fix typo limiting gen4 to TILING_X depth buffers

Fixes regression from

commit 98b312e579385e6e4adf6bf0abe20f8ca84592af
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Wed Jan 23 20:51:35 2013 +0000

    sna/dri: Stop feeding I915_TILING_Y to mesa i915c

Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=60178
Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>