src/sna/sna_dri.c
@@ -147,7 +147,7 @@ static uint32_t other_tiling(struct sna *sna, DrawablePtr draw)
 {
 	/* XXX Can mix color X / depth Y? */
 	return kgem_choose_tiling(&sna->kgem,
-				  sna->kgem.gen >=40 ? -I915_TILING_Y : -I915_TILING_X,
+				  sna->kgem.gen >= 040 ? -I915_TILING_Y : -I915_TILING_X,
 				  draw->width,
 				  draw->height,
 				  draw->bitsPerPixel);
